edited the href

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaScript Student</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="top-container" >
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
 
             <h1>I'm JavaScript Student!</h1>
             <p><h2 class="subheading" >a programmer.</h2></p>
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
             <div class="profile">
-              <img src="images/man.png" alt="avatar-img">
+              <img src="man.png" alt="avatar-img">
               <h2>Hello.</h2>
               <p class="intro">An enthusiastic web development/ coding newbie. After years of rummaging through the technology ecosystem finding a platform for growth, here I am. I found a ladder and I'm at the bottom rung and here's what I have to show for now! I <span style="color: red" >&hearts;</span> coffee and some music.
             </div>
@@ -29,12 +29,12 @@
             <div>
               <h2>My Skills.</h2>
               <div class="skill-row">
-                <img class="skill-code" src="images/computer.png" alt="">
+                <img class="skill-code" src="computer.png" alt="">
                 <h3 class="skill-title" >Design & Development</h3>
                 <p class="skill-desc-code" >I am currently working on my profile site using HTML5, CSS3 and JavaScript. I intend to learn frameworks and libraries afterwards.</p>
               </div>
               <div class="skill-row">
-                <img class="skill-chilli" src="images/chillies.png" alt="">
+                <img class="skill-chilli" src="chillies.png" alt="">
                 <h3 class="skill-title" >Hot wings challenge</h3>
                 <p class="skill-desc-chilli" >Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
               </div>
