--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
             <h1>I'm JavaScript Student!</h1>
             <p><h2 class="subheading" >a programmer.</h2></p>
-            <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-            <img class="mountain" src="images/mountain.png" alt="mountain-img">
+            <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+            <img class="mountain" src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
             <div class="profile">
